hphp/test/quick/ctor_param_promotion_trait.php.expectf
HipHop Fatal error: Constructor parameter promotion not allowed on traits or interfaces in %s on line 4
